kubernetes/policies/dns-policy.yaml
# Check if this one is really required, for now seems to work but that might also be due to caching.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dns-policy
  namespace: time-capsule
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
